tests/snapshots/run_wpt_conformance__litert_slice_float16_4D_tensor_with_strides.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "slice.https.any.js",
    "slice float16 4D tensor with strides",
    "litert",
    "PASS",
)
